# sphinxcontrib-django2

./: CHANGES.rst  README.rst  pyproject.toml
docs/: conf.py  index.rst
sphinxcontrib_django2/: __init__.py
sphinxcontrib_django2/docstrings/: classes.py
