[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools"]

[project]
    authors = [{ name = "Timo Ludwig", email = "ti.ludwig@web.de" }]
    dependencies = ["sphinxcontrib-django"]
    description = "The changes of this fork have been merged into the original package sphinxcontrib-django."
    dynamic = ["version"]
    license = { text = "Apache2 2.0 License" }
    name = "sphinxcontrib-django2"
    readme = "README.rst"
    requires-python = ">=3.7"

    [project.urls]
        "Bug Tracker"   = "https://github.com/timoludwig/sphinxcontrib-django2/issues"
        "Documentation" = "https://sphinxcontrib-django2.readthedocs.io/"
        "Release Notes" = "https://github.com/timoludwig/sphinxcontrib-django2/blob/develop/CHANGES.rst"
        "Source Code"   = "https://github.com/timoludwig/sphinxcontrib-django2"
        "Upstream Package" = "https://pypi.python.org/pypi/sphinxcontrib-django/"
        "Upstream Source Code" = "https://github.com/edoburu/sphinxcontrib-django"

    [project.optional-dependencies]
        doc = ["sphinx-last-updated-by-git", "sphinx-rtd-theme"]

[tool.setuptools.dynamic]
    version = { attr = "sphinxcontrib_django2.__version__" }

[tool.setuptools.packages.find]
    include = ["sphinxcontrib_django2*"]
